# qrtwhisper

./: .gitmodules  CMakeLists.txt  MainWidget.cpp  MainWidget.h  README.md  TextRender.cpp  TextRender.h  TransparentLabel.h  TransparentWindow.cpp  Tray.cpp  Tray.h  TrayApp.h  View.cpp  View.h  config.h.in  controller.cpp  controller.h  main.cpp  model.cpp  model.h  sdl_mics.cpp  stream.cpp  tray_app.cpp  view.cpp  view.h
test/: TransparentLabel.cpp  TransparentLabel.h  position.cpp  position_kde.cpp  position_linux.cpp
